# my_samplesite

./: .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yaml  manage.py  pyproject.toml  requirements.txt
bboard/: admin.py  forms.py  models.py  urls.py  views.py
bboard/migrations/: 0001_initial.py  0002_auto_20211009_1821.py  0002_auto_20211018_1726.py  0003_auto_20211019_1854.py  0003_auto_20220108_2039.py
bboard/static/bboard/: style.css
bboard/templates/bboard/: by_rubric.html  create.html  index.html  index_temp.html
bboard/templates/layout/: basic.html
my_samplesite/: asgi.py  settings.py  urls.py  wsgi.py
pg-backup/: Dockerfile  Readme.md  backup.sh  install.sh  restore.sh
